eel4842_ws/log/build_2024-03-07_19-58-54/wall_following/stdout_stderr.log
running egg_info
writing ../../build/wall_following/wall_following.egg-info/PKG-INFO
writing dependency_links to ../../build/wall_following/wall_following.egg-info/dependency_links.txt
writing entry points to ../../build/wall_following/wall_following.egg-info/entry_points.txt
writing requirements to ../../build/wall_following/wall_following.egg-info/requires.txt
writing top-level names to ../../build/wall_following/wall_following.egg-info/top_level.txt
reading manifest file '../../build/wall_following/wall_following.egg-info/SOURCES.txt'
writing manifest file '../../build/wall_following/wall_following.egg-info/SOURCES.txt'
running build
running build_py
copying wall_following/wall_follow.py -> /home/molyo/EEL4842/eel4842_ws/build/wall_following/build/lib/wall_following
running install
running install_lib
copying /home/molyo/EEL4842/eel4842_ws/build/wall_following/build/lib/wall_following/wall_follow.py -> /home/molyo/EEL4842/eel4842_ws/install/wall_following/lib/python3.10/site-packages/wall_following
byte-compiling /home/molyo/EEL4842/eel4842_ws/install/wall_following/lib/python3.10/site-packages/wall_following/wall_follow.py to wall_follow.cpython-310.pyc
  File "/home/molyo/EEL4842/eel4842_ws/install/wall_following/lib/python3.10/site-packages/wall_following/wall_follow.py", line 37
    if (!self.autonomous):
        ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/molyo/EEL4842/eel4842_ws/install/wall_following/lib/python3.10/site-packages/wall_following-1.0-py3.10.egg-info' (and everything under it)
Copying ../../build/wall_following/wall_following.egg-info to /home/molyo/EEL4842/eel4842_ws/install/wall_following/lib/python3.10/site-packages/wall_following-1.0-py3.10.egg-info
running install_scripts
Installing wall_follow script to /home/molyo/EEL4842/eel4842_ws/install/wall_following/lib/wall_following
writing list of installed files to '/home/molyo/EEL4842/eel4842_ws/build/wall_following/install.log'
